# botlab-firmware

./: .gitignore  .gitmodules  README.md  setup.sh
comms/: CMakeLists.txt
comms/include/comms/: common.h  mbot_messages.h  messages.h  messages_mb.h  protocol.h
comms/src/: listener.c  mbot_messages.c  messages.c  messages_mb.c  protocol.c
controls/include/controls/: controller.h
controls/src/: controller.c
rc/: CMakeLists.txt
rc/include/rc/defs/: common_defs.h  mbot_diff_defs.h  mbot_diff_defs_template.h  mbot_omni_defs.h
rc/include/rc/fram/: fram.h
rc/include/rc/motor/: motor.h
rc/src/defs/: mbot_defs.c
rc/src/encoder/: encoder.c
rc/src/fram/: fram.c
rc/src/motor/: motor.c
rc/src/mpu/: mpu.c
src/: CMakeLists.txt  mbot.c  mbot.h
tests/: CMakeLists.txt  motor_analyze.c  pico_calibrate_accel.c  pico_calibrate_gyro.c  pico_dmp_test.c  pico_drive_forward.c  pico_encoder_output.c  pico_encoder_test.c  pico_fram_test.c  pico_motor_analyze.c  pico_motor_test.c  pico_teleop.c  pico_usb_serial_test.c  test_driving.c
